[package]
name = "cargo-minicov"
version = "0.1.1"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "Code coverage support for no_std and embedded programs"
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/minicov"
readme = "../README.md"
keywords = ["coverage", "no_std", "gcov"]
categories = ["development-tools", "no-std", "embedded"]
edition = "2018"

[dependencies]
postcard = { version = "0.5.1", default-features = false }
serde = "1.0.117"
structopt = "0.3.20"

[build-dependencies]
cc = "1.0.62"
