[package]
name = "minicov"
version = "0.2.1"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "Code coverage support for no_std and embedded programs"
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/minicov"
readme = "../README.md"
keywords = ["coverage", "no_std", "llvm-cov"]
categories = ["development-tools", "no-std", "embedded"]
edition = "2018"

[features]
default = ["alloc"]
alloc = []

[dependencies]

[build-dependencies]
cc = "1.0.66"
walkdir = "2.3.1"
